# validation

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RESULTS.md  pyproject.toml  requirements.txt  validation-latest-py3-none-any.whl
.github/: .release-please-manifest.json  release.yml
.github/workflows/: build-runner.yml  bump-version.yml  framework-tests.yml  main.yml  release-gateway.yml  release-please.yml  release.yml  update-tests.yml
conf/: targets.toml
conf/engines/: 2_4_3_release.toml
conf/targets/: 1_rpi4.toml  2560_docker.toml  2_exoscale_vm.toml  2_ubuntu_vm.toml  rpi4.toml  rpi4_docker.toml  rpi4_kubernetes.toml  ubuntu_vm.toml  ubuntu_vm_docker.toml  ubuntu_vm_k8s.toml
docker_runner/: Dockerfile  docker-compose.yml  start_runner.sh  start_runner_fleet.sh  stop_runner_fleet.sh
docs/: ADD_DEVICE.md  ADD_TESTS.md  HOWTOUSE.md  README.md  functional_validation.md  valiation.md
docs/actions_runner/: README.md
docs/architecture/: README.md  architecture.md  validation_service.md
docs/graffle/: Architecture_Overview.graffle
docs/media/: Architecture_Overview.graffle
docs/testbed/: README.md
docs/tests/: 01 Basic Tests.md  02 Nuvla Operations.md  03 Peripherals.md  1. Basic Tests.md  1. Generic Deployment.md  3. Deployment with common errors.md  4. Deployment corner cases.md  6.- Resource Profiling.md  EXAMPLE.md  README.md
gateway_container/: Dockerfile  entrypoint.sh
release-history/: validation-0.0.1-py3-none-any.whl  validation-0.0.2-py3-none-any.whl
results/: README.md
results/json/: EngineUpdateUp-20221212135453.json  EngineUpdateUp-20221212135751.json  EngineUpdateUp-20221212140000.json  EngineUpdateUp-20221212140228.json  EngineUpdateUp-20221213093528.json  EngineUpdateUp-20221214103505.json  EngineUpdateUp-20221214104702.json  EngineUpdateUp-20221214105635.json  EngineUpdateUp-20221214110716.json  EngineUpdateUp-20221214111038.json  EngineUpdateUp-20221214114918.json  TestEngineReboot-20221212140945.json  TestEngineReboot-20221212141344.json  TestEngineReboot-20221212141612.json  (+24 more)
scripts/: fetch-targets.sh
validation_framework/: __init__.py  __main__.py  main.py
(+114 files in other folders)
