[tool.poetry]
name = "validation"
version = "1.4.1"
description = ""
authors = ["Nacho <nacho@sixsq.com>"]
packages = [{include = "validation_framework"}]
readme = "README.md"

[tool.poetry.scripts]
validation = "validation_framework:entrypoint"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.0"
nuvla-api = "^4.2.2"
paramiko = "^3.5.0"
fabric = "^3.2.2"
toml = "0.10.2"
invoke = "^2.2.0"
xmltodict = "^0.14.0"
unittest-xml-reporting = "3.2.0"
requests = "^2.32.0"
pytablewriter = "^1.2.0"
wget = "3.2"
decorator = "5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
